# pikppo-mcp

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  main.py  pikppo.db-shm  pikppo.db-wal  pyproject.toml  requirements.txt  start.sh  test_main.http
app/: database.py
app/models/: group.py  response.py  role.py  user.py
app/routers/: calendar.py  groups.py  roles.py  users.py
app/services/: calendar_service.py  role_service.py  user_service.py
docs/: db-decision.md  future-tools.md  technical-design.md
scripts/: cloudbuild.yaml  deploy-gcp.sh  init-db.py  start.sh
src/app/: __main__.py  auth.py  database.py  main.py  server.py
src/app/models/: calendar_event.py  exchange_rate.py  memory.py
src/app/routers/: memories.py
src/app/services/: calendar_service.py  exchange_service.py  group_service.py  memory_service.py  role_service.py  stock_service.py
src/app/storage/: __init__.py  postgres.py
src/app/tools/: calendar.py  exchange.py  groups.py  memories.py  roles.py  stock.py  users.py
src/pikppo/mcp/: __main__.py  server.py
src/pikppo/mcp/models/: stock.py
src/pikppo/mcp/services/: exchange_service.py  stock_service.py
src/pikppo/mcp/storage/: __init__.py
src/pikppo/mcp/tools/: exchange.py  stock.py
tests/: conftest.py  test_calendar.py  test_exchange.py  test_groups.py  test_memories.py  test_roles.py  test_stock.py  test_users.py
